--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,4 +35,6 @@
  */
 dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
+    compileOnly files("libs/[1.7.10]TerraFirmaCraftPlus-deobf-0.89.1.jar")
+//    compileOnly files("libs/[1.7.10]TerraFirmaCraftPlus-src-0.89.1.jar")
 }
