--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,6 +35,5 @@
  */
 dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
-    compileOnly files("libs/[1.7.10]TerraFirmaCraftPlus-deobf-0.89.1.jar")
-    compileOnly files("libs/tfcquickpockets-1.1.6.jar")
+    compileOnly files("libs/1.7.10-TerraFirmaCraft-0.79.30.925.jar")
 }
